RESOLVED FIXED274547
[PlayStation] Fix build break after 279130@main
https://bugs.webkit.org/show_bug.cgi?id=274547
Summary [PlayStation] Fix build break after 279130@main
Jigen Zhou
Reported 2024-05-22 13:05:37 PDT
Playstation build failed since TextureMapperPlatformLayerBuffer::setFence is only available if PLATFORM(GTK) || PLATFORM(WPE) C:/BW/PlayStation-Release-Build/build/Source/WebCore\platform/graphics/nicosia/NicosiaImageBufferPipe.cpp:145:26: error: no member named 'setFence' in 'WebCore::TextureMapperPlatformLayerBuffer'
Attachments
EWS
Comment 1 2024-05-22 15:33:28 PDT
Committed 279154@main (1fc4f38b7605): <https://commits.webkit.org/279154@main> Reviewed commits have been landed. Closing PR #28944 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2024-05-22 15:34:14 PDT
Note You need to log in before you can comment on or make changes to this bug.