Fixed Playstation  build break after 279130@main https://bugs.webkit.org/show_bug.cgi?id=274547

Reviewed by Don Olmstead.

TextureMapperPlatformLayerBuffer::setFence is only available if PLATFORM(GTK) || PLATFORM(WPE)

* Source/WebCore/platform/graphics/nicosia/NicosiaImageBufferPipe.cpp:

Canonical link: https://commits.webkit.org/279154@main